--- a/index.html
+++ b/index.html
@@ -1,103 +1,133 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>FC BOTOSANI</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <!-- Banner section -->
-    <div class="row">
-      <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
-    </div>
 
-    <!-- Navbar section -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>FC BT-KIDS</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+</head>
 
-    <nav class="navbar navbar-expand-lg bg-light navbar-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="gallery.html">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
-        </li>
-        
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<hr>
-
-<!-- First section -->
-<section>
+<body>
+  <!-- Banner section -->
   <div class="row">
-    <div class="col">
-      <img src="/assets/images/gallery/Image01.jpg" alt="" class="img-fluid">
-      <h2>Lorem Ipsum</h2>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
-    </div>
+    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
   </div>
-</section>
+  <!-- Bannher with h1-->
+  <div class="row contanier-fluid">
+    <h1 id="bannerid">GROW HEALTHY WITH FOOTBALL</h1>
 
-<hr>
 
-<!--Second section-->
-
-<section>
-  <div class="row">
-    <div class="col-sm-6">
-      <img src="/assets/images/gallery/Image02.jpg" alt="" class="img-fluid">
-      <h2>Lorem Ipsum</h2>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
-    </div>
-
-    <div class="col-sm-6">
-      <img src="/assets/images/gallery/Image03.jpg" alt="" class="img-fluid">
-      <h2>Lorem Ipsum</h2> 
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
-    </div>
   </div>
-</section>
 
-<hr>
+  <!-- Navbar section -->
 
+  <nav class="navbar navbar-expand-lg bg-light navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="/assets/images/thumbnails/logo.png" alt="Team Logo" id="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+          </li>
 
-<footer>
-        <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
         </ul>
-    </footer>
+      </div>
+    </div>
+  </nav>
 
-  
+  <!-- First section -->
+  <section>
+    <div class="row">
+      <div class="col">
+        <h2>Club Objectives</h2>
+        <p>
+          The Club's goal is to create an educational project with innovative and interactive features and teaching
+          methods that start with sports as a creative game.
+
+          Football training for initiation / performance groups is carried out using exercises specific to initiation /
+          performance, so that children can learn the secrets of football as well as possible.
+
+          Depending on each stage of the child's development, age and physical abilities, motor skills, reflexes are
+          formed, coordination is improved, effort is increased, football-specific technique and tactics are perfected,
+          which ensures good adaptability to game situations.
+        </p>
+        <img src="/assets/images/gallery/Image01.jpg" alt="" class="img-fluid">
+
+      </div>
+    </div>
+  </section>
+
+  <hr>
+
+  <!--Second section-->
+
+  <section>
+    <div class="row">
+      <div class="col-sm-6">
+        <img src="/assets/images/gallery/Image02.jpg" alt="" class="img-fluid">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
+          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
+          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+          PageMaker including versions of Lorem Ipsum.
+        </p>
+      </div>
+
+      <div class="col-sm-6">
+        <img src="/assets/images/gallery/Image03.jpg" alt="" class="img-fluid">
+        <h2>Lorem Ipsum</h2>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
+          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
+          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+          PageMaker including versions of Lorem Ipsum.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <hr>
+
+
+  <footer>
+    <ul class="social-networks">
+      <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
+      <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
+      <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
+      <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
+    </ul>
+  </footer>
 
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
-  </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
