Changed the banner

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
   </div>
   <!-- Bannher with h1-->
-  <div class="row contanier-fluid">
-    <h1 id="bannerid">GROW HEALTHY WITH FOOTBALL</h1>
+  <div class="contanier-fluid">
+    <h1 id="bannerid">FOOTBALL CLUB BRITISH KIDS</h1>
 
 
   </div>
