Changed footer color and size. Added relevant content to index.html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
   <div class="row">
     <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
   </div>
-  <!-- Bannher with h1-->
-  <div class="contanier-fluid">
-    <h1 id="bannerid">FOOTBALL CLUB BRITISH KIDS</h1>
-
 
   </div>
 
@@ -28,7 +24,7 @@
 
   <nav class="navbar navbar-expand-lg bg-light navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="/assets/images/thumbnails/logo.png" alt="Team Logo" id="logo"></a>
+      <a class="navbar-brand" href="index.html"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -49,7 +45,7 @@
       </div>
     </div>
   </nav>
-
+  <hr>
   <!-- First section -->
   <section>
     <div class="row">
@@ -80,37 +76,45 @@
     <div class="row">
       <div class="col-sm-6">
         <img src="/assets/images/gallery/Image02.jpg" alt="" class="img-fluid">
-        <h2>Lorem Ipsum</h2>
+        <h3>
+          Disproported scores from children's matches</h3>
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
+          If you watch the results from the championships, tournaments or friendly matches for children, you will quite
+          often notice final results with very large score differences (12-0, 16-1, even 25-0). These results can shake
+          the confidence of any child. from that game and the disadvantaged team can suffer psychologically.
+          Sometimes, the teams that win at huge differences in score are the ones that focus on the development of the
+          collective game and not on the individual development of the little football players. But this is not always
+          the case.
+
+
         </p>
       </div>
 
       <div class="col-sm-6">
         <img src="/assets/images/gallery/Image03.jpg" alt="" class="img-fluid">
-        <h2>Lorem Ipsum</h2>
+        <h3>Individual football trainings or not</h3>
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
+          All parents want their little footballers to be as good as possible and to progress as much as possible. When
+          the parent wants the little one to be better at math, he puts a math meditator on it. The same thinking
+          appeared in children's football, the individual training having the role of meditations in the education
+          system. For most, individual training means football training conducted individually (player + coach) in order
+          to accelerate the development of football.
+          For the reasons explained above, we are not fans of individual training for field players. But we believe that
+          individualization (ie working on the specific problems of each player) should not be missing from the training
+          sessions. During the trainings of the FC BT-KIDS football school, children can be organized in workshops so
+          that each workshop addresses the specific problems of that group of players. Thus the exercises can be
+          performed in conditions of real adversity, they being performed in groups of players.
+
         </p>
       </div>
     </div>
   </section>
 
-  <hr>
+
 
 
   <footer>
-    <ul class="social-networks">
+    <ul class="footer">
       <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
       <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
       <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
