--- a/contact.html
+++ b/contact.html
@@ -2,103 +2,104 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contact Us!</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-	 crossorigin="anonymous" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	 crossorigin="anonymous">
-	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us!</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-	<!-- Banner section -->
-	<div class="row">
-		<div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
-    </div>
-
-    <!-- Navbar section -->
-
-    <nav class="navbar navbar-expand-lg bg-light navbar-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="gallery.html">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
-        </li>
-        
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
-
-<!-- Form -->
-<div class="col-sm-4">
-<form class="formular">
-      <h2>Register your interest!</h2>
-  <div class="mb-3">
-    <label for="fname1" class="form-label">First name:</label>
-    <input type="text" class="form-control" id="fname" aria-describedby="fnameHelp">
-    <div id="fnameHelp" class="form-text">Enter your First name.</div>
-  </div>
-  <div class="mb-3">
-    <label for="lname1" class="form-label">Last name:</label>
-    <input type="text" class="form-control" id="lname" aria-describedby="lnameHelp">
-    <div id="nameHelp" class="form-text">Enter your Last name.</div>
+  <!-- Banner section -->
+  <div class="row">
+    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
   </div>
 
-  <div class="mb-3">
-    <label for="email" class="form-label">Email</label>
-    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">Enter your email address.</div>
-    </div>
-  
-  
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-</div>
+  <!-- Navbar section -->
 
-<br>
+  <nav class="navbar navbar-expand-lg bg-light navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+          </li>
 
-
-<!-- Iframe -->
-<div class="container">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2682.7171718579666!2d26.649779716142586!3d47.74814208618195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4734e96035233879%3A0x2b09f0c0a358d5f4!2sStadionul%20Municipal!5e0!3m2!1sen!2suk!4v1638993930365!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="responsive-iframe"></iframe>
-</div>
-
-<footer>
-        <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
         </ul>
-    </footer>
-
-  
-
-
+      </div>
+    </div>
+  </nav>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
+  <!-- Form -->
+  <div class="col-sm-4">
+    <form class="formular">
+      <h2>Register your interest!</h2>
+      <div class="mb-3">
+        <label for="fname1" class="form-label">First name:</label>
+        <input type="text" class="form-control" id="fname" aria-describedby="fnameHelp">
+        <div id="fnameHelp" class="form-text">Enter your First name.</div>
+      </div>
+      <div class="mb-3">
+        <label for="lname1" class="form-label">Last name:</label>
+        <input type="text" class="form-control" id="lname" aria-describedby="lnameHelp">
+        <div id="nameHelp" class="form-text">Enter your Last name.</div>
+      </div>
 
-  
-  
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">Enter your email address.</div>
+      </div>
+
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
+
+  <br>
+
+
+  <!-- Iframe -->
+  <div class="container">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2682.7171718579666!2d26.649779716142586!3d47.74814208618195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4734e96035233879%3A0x2b09f0c0a358d5f4!2sStadionul%20Municipal!5e0!3m2!1sen!2suk!4v1638993930365!5m2!1sen!2suk"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="responsive-iframe"></iframe>
+  </div>
+
+  <footer>
+    <ul class="footer">
+      <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
+      <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
+      <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
+      <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
+    </ul>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+
+  <script src="script.js"></script>
+
+
+
 </body>
+
 </html>
