Fixed menu bar in gallery and added description to banner.

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
   <!-- Banner section -->
   <div class="row">
-    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
+    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="FC-BT KIDS Banner  Healthy lifestyle with football message"></div>
   </div>
 
   <!-- Navbar section -->
@@ -31,13 +31,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link"  href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link  active" aria-current="page" href="contact.html">Contact Us</a>
           </li>
 
         </ul>
