--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body class="margine">
   <!-- Banner section -->
   <div class="row">
-    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="Logo"></div>
+    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="FC-BT KIDS Banner  Healthy lifestyle with football message"></div>
   </div>
 
   </div>
@@ -45,13 +45,13 @@
       </div>
     </div>
   </nav>
-  <hr>
+  
   <!-- First section -->
   <section>
     <div class="row">
       <div class="col">
-        <h2>Club Objectives</h2>
-        <p>
+        <h2 class="margine">Club Objectives</h2>
+        <p class="margine">
           The Club's goal is to create an educational project with innovative and interactive features and teaching
           methods that start with sports as a creative game.
 
@@ -131,7 +131,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
 
-  <script src="script.js"></script>
+  
 </body>
 
 </html>
