--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
 
   <!-- Form -->
-  <div class="col-sm-4">
+  <div class="col-sm-4 center">
     <form class="formular">
       <h2>Register your interest!</h2>
       <div class="mb-3">
