--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <hr>
 
   <!--Second section-->
-
+  <h2>News Section</h2>
   <section>
     <div class="row">
       <div class="col-sm-6">
@@ -114,12 +114,15 @@
 
 
   <footer>
-    <ul class="social-networks">
-      <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
-      <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
-      <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
-      <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
-  </ul>
+    <div class="footer-background">
+        <ul class="footer-links">
+          <li><a href="https://www.fifa.com" target="_blank"><i class="fas fa-futbol"></i></li>
+          <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
+          <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
+          <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></li>
+          <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></li>
+        </ul>
+      </div>    
   </footer>
 
 
