--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="margine">
+<body>
   <!-- Banner section -->
   <div class="row">
     <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="FC-BT KIDS Banner  Healthy lifestyle with football message"></div>
