Fixed footer for gallery and contact us and modified readme.md

--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,15 @@
   </div>
 
   <footer>
-    <ul class="footer">
-      <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"> </i></li>
-      <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"> </i></li>
-      <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"> </i></li>
-      <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
-    </ul>
+    <div class="footer-background">
+        <ul class="footer-links">
+          <li><a href="https://www.fifa.com" target="_blank"><i class="fas fa-futbol"></i></li>
+          <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></li>
+          <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"> </i></li>
+          <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></li>
+          <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></li>
+        </ul>
+      </div>    
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
