--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <section>
     <div class="row">
       <div class="col">
-        <h2 class="margine">Club Objectives</h2>
-        <p class="margine">
+        <h2>Club Objectives</h2>
+        <p>
           The Club's goal is to create an educational project with innovative and interactive features and teaching
           methods that start with sports as a creative game.
 
@@ -62,7 +62,7 @@
           formed, coordination is improved, effort is increased, football-specific technique and tactics are perfected,
           which ensures good adaptability to game situations.
         </p>
-        <img src="/assets/images/gallery/Image01.jpg" alt="" class="img-fluid">
+        <img src="/assets/images/gallery/Image01.jpg" alt="Club players" class="img-fluid">
 
       </div>
     </div>
@@ -75,7 +75,7 @@
   <section>
     <div class="row">
       <div class="col-sm-6">
-        <img src="/assets/images/gallery/Image02.jpg" alt="" class="img-fluid">
+        <img src="/assets/images/gallery/Image02.jpg" alt="Coach explaining tactics to players" class="img-fluid">
         <h3>
           Disproported scores from children's matches</h3>
         <p>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="col-sm-6">
-        <img src="/assets/images/gallery/Image03.jpg" alt="" class="img-fluid">
+        <img src="/assets/images/gallery/Image03.jpg" alt="Alone player on the field" class="img-fluid">
         <h3>Individual football trainings or not</h3>
         <p>
           All parents want their little footballers to be as good as possible and to progress as much as possible. When
