Changed banner from static to link to main page.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Banner section -->
   <div class="row">
-    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="FC-BT KIDS Banner  Healthy lifestyle with football message"></div>
+    <div class="col"><a href="index.html"><img src="assets/images/banner.jpg" class="img-fluid" alt="FC-BT KIDS Banner  Healthy lifestyle with football message"></a></div>
   </div>
 
   </div>
