--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
   <!-- Banner section -->
   <div class="row">
-    <div class="col"><img src="assets/images/banner.jpg" class="img-fluid" alt="FC-BT KIDS Banner  Healthy lifestyle with football message"></div>
+    <div class="col"><a href="index.html"><img src="assets/images/banner.jpg" class="img-fluid" alt="FC-BT KIDS Banner  Healthy lifestyle with football message"></a></div>
   </div>
 
   <!-- Navbar section -->
